# game-of-life

./: CMakeLists.txt  LICENSE  README.md  main.cpp
boards/: gosperGliderGun.txt  pulsar.txt
headers/: Board.hpp  Cell.hpp  TxtParser.hpp  Utils.hpp
include/: board.hpp  board_parser.hpp  cell.hpp  utils.hpp
old_version/: .gitignore  CMakeLists.txt
old_version/headers/: Board.hpp  TxtParser.hpp
old_version/src/: Board.cpp  Cell.cpp  TxtParser.cpp  Utils.cpp  main.cpp
src/: Board.cpp  Cell.cpp  TxtParser.cpp  Utils.cpp  board.cpp  board_parser.cpp  main.cpp
